syntax = "proto3";

message Candidate{
    int32 index = 1;
    float score = 2;
}
message CandidateUpdate{
    repeated Candidate data = 1;
}
message Suggestions{
    repeated string words = 1;
}
message Sentence{
    string word = 1;
}
message Ready{
    bool ready = 1;
}
message Void{}

service EremApi{
    rpc getSuggestions(CandidateUpdate) returns (Suggestions){}
    rpc setSentence(Sentence) returns (Void){}
    rpc isReady(Void) returns (Ready)
}